--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/passport": "^1.0.16",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@types/passport-local": "^1.0.38",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "mongoose": "^8.4.1"
+    "express-session": "^1.18.0",
+    "mongoose": "^8.4.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   }
 }
