--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.44.0",
+    "antd": "^5.19.2",
     "autoprefixer": "^10.4.19",
     "fuse.js": "^7.0.0",
     "postcss": "^8.4.38",
