build: Update client Dockerfile to load .env correctly

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,14 +1,18 @@
 FROM node:18.19.0
 
+# Create a client directory so that the .env file will be located in the correct directory
+WORKDIR /client
+
 # Copy over the package.json file
-COPY package.json .
+COPY package.json ./client
 
 # Install the packages
 RUN npm install
 RUN npm install -g serve
 
 # Copy over the rest of the files
-COPY . .
+COPY .env .
+COPY . ./client
 
 # Build the app
 RUN npm run build
