--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.44.0",
     "antd": "^5.19.2",
     "autoprefixer": "^10.4.19",
+    "dotenv": "^16.4.5",
     "fuse.js": "^7.0.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
